--- a/eShoppingSite/src/app/container/container.component.html
+++ b/eShoppingSite/src/app/container/container.component.html
@@ -1,1 +1,5 @@
-<app-nav></app-nav>
+<div class="wrapper">
+    <app-nav></app-nav>
+    <app-header></app-header>
+    <app-notification></app-notification>
+</div>
