--- a/udemyShoppingRecipe/src/app/app.component.html
+++ b/udemyShoppingRecipe/src/app/app.component.html
@@ -1,10 +1,10 @@
-<app-header></app-header>
+<app-header (featureSelected)="onChange($event)"></app-header>
 <div class="container">
     <div class="row">
         <div class="col-md-12">
             <h2>Priyanka saini</h2>
-            <app-recipes></app-recipes>
-            <app-shopping-list></app-shopping-list>
+            <app-recipes *ngIf="value === 'recipe'"></app-recipes>
+            <app-shopping-list *ngIf="value !== 'recipe'"></app-shopping-list>
         </div>
     </div>
 </div>
