--- a/NgrxSeries/src/app/counter/counter/counter.component.html
+++ b/NgrxSeries/src/app/counter/counter/counter.component.html
@@ -9,5 +9,10 @@
             <!-- <app-counter-button (increment)="onIncrement()" (decrement)="onDecrement()" (reset)="onReset()"></app-counter-button> -->
             <app-counter-button></app-counter-button>
         </div>
+
+        <div class="my-3">
+            <app-custom-counter-input></app-custom-counter-input>
+        </div>
+        
     </div>
 </div>
