--- a/NgrxSeries/src/app/counter/custom-counter-input/custom-counter-input.component.html
+++ b/NgrxSeries/src/app/counter/custom-counter-input/custom-counter-input.component.html
@@ -1,4 +1,9 @@
 <div>
+    <div class="my-3">{{ text }}</div>
     <input type="text" placeholder="Enter a value.." [(ngModel)]="value">
     <button class="btn btn-primary" (click)="onAdd()">Add to the counter</button>
+</div>
+
+<div>
+    <button (click)="onChangeText()">Change Text</button>
 </div>
