--- a/NgrxSeries/src/app/posts/edit-post/edit-post.component.html
+++ b/NgrxSeries/src/app/posts/edit-post/edit-post.component.html
@@ -1,1 +1,32 @@
-<p>edit-post works!</p>
+<div class="row my-4">
+    <div class="col-md-12">
+        <h3>Update Post</h3>
+    </div>
+    <hr>
+
+    <form [formGroup]="postForm" (ngSubmit)="onUpdatePost()">
+        <div class="mb-3">
+            <label for="" class="text-start">Title</label>
+            <input type="text" class="form-control" formControlName="title">
+        </div>
+
+        <div *ngIf="postForm.get('title').touched && !postForm.get('title').valid">
+            <div *ngIf="postForm.get('title').errors['required']">Title is required!</div>
+            <div *ngIf="postForm.get('title').errors['minlength']">Title should be minimum 6 characters</div>
+        </div>
+
+        <div class="nb-3">
+            <label for="">Description</label>
+            <textarea class="form-control" formControlName="description"></textarea>
+        </div>
+
+        <div *ngIf="postForm.get('description').touched && !postForm.get('description').valid">
+            <div *ngIf="postForm.get('description').errors['required']">Description is required!</div>
+            <div *ngIf="postForm.get('description').errors['minlength']">Description should be minimum 6 characters</div>
+        </div>
+
+        <div class="my-3">
+            <button type="submit" class="btn btn-primary" [disabled]="!postForm.valid">Update Post</button>
+        </div>
+    </form>
+</div>
